--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.3"
   },
